# Noquis-Recorder

./: .gitignore  CMakeLists.txt  README.md  agents.md  ai-memory.md  config.ini  main.cpp  project-documentation.md  vcpkg.json
include/: AppWindow.hpp  Application.hpp  AudioManager.hpp  CaptureManager.hpp  ConfigManager.hpp  GPUDenoiser.hpp  GPUUpscaler.hpp  VideoProcessor.hpp
src/: AppWindow.cpp  Application.cpp  AudioManager.cpp  CaptureManager.cpp  ConfigManager.cpp  GPUDenoiser.cpp  GPUUpscaler.cpp  VideoProcessor.cpp
